# excalibur-order-management

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  CONTRIBUTING.md  HANDOFF.md  KICKOFF.md  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
ansible/: ansible.cfg  requirements.yml
ansible/playbooks/: deploy.yml  rollback.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/graphql/: schema.py
backend/app/api/rest/: health.py  orders.py
backend/app/core/: config.py  logging.py  security.py  telemetry.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/models/: __init__.py  order_combined.py  order_date.py  order_detail.py
backend/app/reporting/: presign.py
backend/app/schemas/: orders.py
backend/app/services/: orders.py  sort.py
backend/tests/: conftest.py
backend/tests/integration/: test_graphql.py  test_orders_api.py
backend/tests/unit/: test_schemas.py  test_services.py  test_sort.py
db/: seed.sql
docs/: SUBMISSION.md
docs/runbooks/: db-credential-rotation.md  failed-deploy.md  healthcheck-rollback.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
infra/: backend.hcl  backend.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
report-runner/: Dockerfile  runner.py
(+108 files in other folders)
